# dbrep

./: .gitignore  README.md  pyproject.toml  set_version.sh  setup.py  testing-docker-compose.yaml  testing-dockerfile
.github/workflows/: python-publish.yml
dbrep/: __init__.py  cli.py  config.py  replication.py  utils.py
dbrep/engines/: engine_base.py  engine_sqlalchemy.py
docs/: concepts.md
examples/: dbrep.yaml  sql_example.yaml
examples/configs/: config.yaml  connection_postgre.yaml  cred.yaml
src/dbsync/: test.py
tests/integration/: config.py  connections.yaml  docker-compose.yaml  dockerfile  drivers.py  errors.py  run_tests.py  runner.py  template_sql2sql.yaml  test.py  test_explicit.yaml  test_implicit.yaml  test_pg.yaml  test_pg2pg.py  test_sql2sql_basic.yaml  utils.py
tests/integration/pg2pg/: test_full_refresh.py
tests/unit/: test_config.py  test_utils.py
utils/: make_tag.sh
